--- a/practically-clojure.org
+++ b/practically-clojure.org
@@ -1026,6 +1026,18 @@ trips up because of the missing close bracket.
 
 
 
+*** Asking questions in Clojure
+
+Predicates
+(odd? 3)
+(even? 11)
+
+Ask a question about every element in an arrays
+
+(filter odd? [1 2 3 4 5 6 7 8 9])
+
+
+
 ** Using Software Transactional Memory
 *** overview
 *** atoms
